java: switch to manual publishing via central API